[tool.poetry]
name = "campsites"
version = "0.1.0"
description = ""
authors = ["Greg Gydush <greggydush@gmail.com>"]
packages = [{ include = "campsites" }]

[tool.poetry.dependencies]
python = "^3.9"
fake-useragent = "^2.2.0"
requests = "^2.25.1"
click = "^7.1.2"
python-dotenv = "^0.17.0"
python-dateutil = "^2.8.1"
twilio = "^9.6.3"
dotenv = "^0.9.9"

[tool.poetry.group.dev.dependencies]
flake8 = "^4.0.1"

[tool.poetry.scripts]
find-campsites = 'campsites.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
