[project]
name = "campsites"
version = "0.1.0"
description = ""
authors = [{ name = "Greg Gydush", email = "greggydush@gmail.com" }]
requires-python = ">=3.9,<4"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "fake-useragent>=2.2.0,<3",
    "requests>=2.25.1,<3",
    "click>=7.1.2,<8",
    "python-dotenv>=0.17.0,<0.18",
    "python-dateutil>=2.8.1,<3",
    "twilio>=9.6.3,<10",
    "dotenv>=0.9.9,<0.10",
]

[project.scripts]
find-campsites = "campsites.cli:main"

[dependency-groups]
dev = ["flake8>=4.0.1,<5"]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-name = ["campsites"]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
